add tests for service lvl